# shortly

./: .env.example  .gitignore  README.md  pyproject.toml
app/: database.py  main.py  models.py
app/core/: config.py  dependencies.py
app/models/: __init__.py  url.py  user.py
app/routers/: auth.py  base.py  ui.py  url.py  user.py
app/services/: auth.py  url.py  user.py
app/templates/: base.html  dashboard.html  index.html  login.html  profile.html  register.html  url_details.html
app/utils/: security.py  shortener.py
tests/: conftest.py  test_auth.py  test_expiration.py  test_urls.py  test_users.py
